# Remote_Operating_System_Frank_2022

haption_7_27/: CMakeLists.txt
haption_7_27/inc/: Rateloop.h  VirtuoseAPI.h  VirtuoseDLL.CS
ros_franka/: CMakeLists.txt  package.xml
ros_franka/inc/: FrankaRobot.h  Rateloop.h
ros_franka/launch/: Franka_CartPos.launch  Franka_CartVel.launch  Franka_Force.launch  Franka_ForceAndCartVel.launch  Franka_ForceAndJointPos.launch  Franka_ForceAndJointVel.launch  Franka_ForceAndPos.launch  Franka_JointPos.launch  Franka_JointVel.launch
ros_franka/lib/: libfranka.so.0.8  libfranka.so.0.8.0
ros_franka/msg/: FrankaCartPos.msg  FrankaCartVel.msg  FrankaData.msg  FrankaForce.msg  FrankaForceAndCartVel.msg  FrankaForceAndJointPos.msg  FrankaForceAndJointVel.msg  FrankaForceAndPos.msg  FrankaJointPos.msg  FrankaJointVel.msg
ros_franka/src/: CartPosPub.cpp  CartPos_Control.cpp  CartVelPub.cpp  CartVel_Control.cpp  ForceAndCartVel_Control.cpp  ForceAndJointPos_Control.cpp  ForceAndJointVelPub.cpp  ForceAndJointVel_Control.cpp  ForceAndPos_Control.cpp  ForcePub.cpp  Force_Control.cpp  FrankaRobot.cpp  Frequency_Control.cpp  JointPos_Control.cpp  JointPub.cpp  JointVelPub.cpp  JointVel_Control.cpp
ros_haption/: CMakeLists.txt
ros_haption/inc/: HaptionRobot.h
ros_haption/launch/: HaptionForceControl.launch
ros_haption/msg/: HaptionData.msg
ros_haption/src/: ForcePub.cpp  HaptionData.cpp  HaptionForceControl.cpp  HaptionJointForceControl.cpp  HaptionJointPosControl.cpp  HaptionPosAndSpeedControl.cpp  HaptionPosControl.cpp  HaptionRobot.cpp  JointForcePub.cpp  PosPub.cpp  (+2 more)
